--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: 韩 晗
 middle_name: 
 last_name: 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  So Near, So Grand——Hebei, Your Weekend-Land!
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
